# sorting-points-spirally

./: .gitignore  README.md  __init__.py  pyproject.toml  req.txt
generating_supports.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: main.py  methods.py  picking_methods.py  utils.py
src/sorting_points_spirally.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py  test_utils.py
