[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sorting_points_spirally"
version = "1.0.0"
description = "This algorithm sorts points in xy flat spirally"
authors = [{ name = "XtereO", email = "fake@gmail.com" }]

[tool.setuptools]
packages = { find = { where = ["src"] } }
